addon/istio/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: istio-ingress
  namespace: istio-system
spec:
  rules:
  - host: grafana.istio.jimmysong.io
    http:
      paths:
      - path: /
        backend:
          serviceName: grafana
          servicePort: 3000 
  - host: servicegraph.istio.jimmysong.io
    http:
      paths:
      - path: /
        backend:
          serviceName: servicegraph
          servicePort: 8088
  - host: zipkin.istio.jimmysong.io
    http:
      paths:
      - path: /
        backend:
          serviceName: zipkin 
          servicePort: 9411
